--- a/2.html
+++ b/2.html
@@ -3,17 +3,61 @@
     <head>
         <title>CSS</title>
         <meta charset = "utf-8">
+        <style>
+            h1{
+                font-size: 45px;
+                border-bottom: solid 1px gray;
+                padding: 20px;
+                text-align: center;
+                margin: 0;
+                
+            }
+            .html, .css,.javascript{
+                text-decoration: none;
+                color: black;
+            }
+            ol{
+                font-size: 20px;
+                border-right: 1px solid gray;
+                width: 100px;
+                margin: 0;
+                padding: 30px;
+            }
+            #grid{
+                display: grid;
+                grid-template-columns: 150px 1fr;
+            }
+            #article{
+                padding-left: 25px;
+            }
+            @media(max-width:700px){
+                #grid{
+                    display: block;
+                }
+                ol{
+                    border-right: none;
+                }
+            }
+        </style>
     </head>
     <body>
-        <h1><a href="index.html">WEB</a></h1>
-        <ol>
-            <li><a href="1.html">html</a></li>
-            <li><a href="2.html">css</a></li>
-            <li><a href="3.html">javascript</a></li>
+        <h1><a href="index.html" style="color: black; text-decoration: none;">WEB</a></h1>
+        <div id="grid">
+        <ol class="menu">
+            <li><a href="1.html" class="html">html</a></li>
+            <li><a href="2.html" class="css">css</a></li>
+            <li><a href="3.html" class="javascript">javascript</a></li>
         </ol>
-
+        <div id="article">
         <h2>CSS</h2>
-        <p>CSS입니다.</p>
-    </body>
+        <p>반갑습니다. CSS입니다.</p>
+        <p>HTML 등의 마크업 언어로 작성된 문서가 실제로 웹사이트에 표현되는 방법을 정해주는 스타일 시트 언어.
 
+            CSS의 C가 Cascading[1]의 약자인데, 이는 상위 요소의 스타일 속성을 자손 요소들에게 상속시켜주는 모습이 DOM 트리구조에서 마치 폭포수처럼 내려가는 모습을 닮았기 때문이다. 다만 예외로 마진, 패딩, 보더 등의 박스모델 관련 속성은 상속되지 않는다. 물론 inherit 값을 줘서 강제로 상속시킬 순 있다.
+            
+            스타일 시트 언어이므로 일반적인 프로그래밍 언어와는 다른 종류의 기능을 하지만 HTML과 연결시키면 다음 코드로 Hello World를 출력할 수 있기도 하다.
+            </p>
+        </div>
+        </div>
+    </body>
 </html>
